--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,14 @@
             "src": "vite.config.js",
             "use": "@vercel/static-build",
             "config": {
-                "distDir": "dist"
+            "distDir": "dist"
             }
         }
     ],
     "routes": [
-        { "src": "/(.*)", "dest": "/App.jsx" }
+        {
+        "src": "/(.*)",
+        "dest": "/index.html"
+        }
     ]
 }
